--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.6.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
+    "@types/firebase": "^3.2.1",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
