--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "firebase": "^9.6.7",
     "react": "^17.0.2",
+    "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
