--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.2",
+    "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.22",
+    "axios": "^0.26.0",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux-persist": "^6.0.0",
+    "usehooks-ts": "^2.4.1"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
