--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reduxjs/toolkit": "^1.7.2",
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.22",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^0.26.0",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.4.1",
     "usehooks-ts": "^2.4.1"
   },
   "devDependencies": {
