--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
     "@types/axios": "^0.14.0",
+    "@types/emoji-mart": "^3.0.9",
     "@types/react-redux": "^7.1.22",
     "@types/socket.io-client": "^3.0.0",
     "axios": "^0.26.0",
+    "emoji-dictionary": "^1.0.11",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
+    "react-input-emoji": "^4.0.9",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux-persist": "^6.0.0",
