--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emoji-dictionary": "^1.0.11",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.1",
@@ -26,11 +27,13 @@
     "react-router-dom": "^6.2.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.4.1",
+    "tailwindcss-animation-delay": "^1.0.7",
     "usehooks-ts": "^2.4.1"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
     "@types/react": "^17.0.39",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
